# ai-tax-custom

./: .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  entities.py  tax.py  transactions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entity.py  form.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  entity.py  transaction.py  user.py
backend/app/services/auth/: __init__.py  service.py
backend/app/services/classification/: __init__.py  classification_service.py  classifier.py
backend/app/services/forms/: __init__.py  form_service.py  pdf_generator.py  xml_generator.py
backend/app/services/ingestion/: __init__.py  ai_extractor.py  ingestion_service.py
backend/app/services/tax/: __init__.py  schedule_c.py  tax_service.py
backend/migrations/: env.py
backend/migrations/versions/: 263a0849a227_initial_migration.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Breadcrumbs.tsx  CommandPalette.tsx  EntitySelector.tsx  Layout.tsx  Loading.tsx  ToastProvider.tsx
frontend/src/contexts/: EntityContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Entities.tsx  EntityDetails.tsx  Login.tsx  Register.tsx  Settings.tsx  TaxForms.tsx  Transactions.tsx
frontend/src/types/: index.ts
memory-bank/: activeContext.md  plan.md  productContext.md  progress-tracker.md  projectbrief.md  systemPatterns.md  techContext.md
