[project]
name = "ai-tax-engine"
version = "0.1.0"
description = "AI-Powered Tax Automation System"
authors = [{name = "AI Tax Team"}]
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # AI/ML
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-stubs>=2.0.0",
    
    # File handling
    "python-magic>=0.4.27",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    
    # PDF generation
    "reportlab>=4.0.0",
    
    # XML for IRS e-file
    "lxml>=4.9.0",
    "xmlschema>=2.5.0",
    
    # Financial APIs
    "plaid-python>=7.2.0",
    "stripe>=7.0.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
    "httpx>=0.26.0",
    "aiofiles>=23.0.0",
    "redis>=5.0.0",
    
    # Task queue
    "celery>=5.3.0",
    
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
